Add Jest setup and tests for activeSectionHandler (#28)

--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
+  <<<<<<< codex/set-up-jest-and-create-tests
+  "description": "Portfolio project",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "jest": {},
+  "devDependencies": {
+    "jest": "^29.6.2"
+  =======
   "scripts": {
     "test": "jest"
   },
   "devDependencies": {
     "jest": "^29.7.0",
     "jsdom": "^21.1.0"
+  >>>>>>> main
   }
 }
